playing with Java 9 modules